# brainhole

./: .env  .env.example  .eslintrc.json  .gitignore  .npmrc  README.md  README_zh.md  forge.config.ts  graphrag_patch.py  index.html  package-lock.json  package.json  start.bat  start.sh  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
.github/workflows/: build.yml
assets/: icon.icns
docs/: screenshots.md  screenshots_zh.md
funasr/: README.md  main.py  pyproject.toml  transcribe.py
graphrag/: main.py  pyproject.toml
mineru/: README.md  pyproject.toml  test_docling.py  test_liteparse.py  test_markitdown.py
scripts/: dev.js  setup_cn.bat  setup_cn.sh
src/main/: database.ts  graph.ts  i18n.ts  main.ts  vault.ts  vite-env.d.ts
src/main/services/: doclingParser.ts  documentParser.ts  funasrService.ts  logService.ts  markitdownParser.ts  mineruParser.ts  modelManager.ts  taskQueue.ts
src/main/services/scripts/: model_manager.py
src/preload/: preload.ts
src/renderer/: App.tsx  main.tsx  vite-env.d.ts
src/renderer/components/: ErrorBoundary.tsx
src/renderer/hooks/: useDropdownMenu.ts  useGlobalShortcuts.ts  useScrollPropagation.ts  useToast.ts
src/renderer/i18n/: index.ts
src/renderer/services/: aiService.ts  imaService.ts  storageService.ts
src/renderer/stores/: canvasStore.ts  taskStore.ts  toastStore.ts
src/renderer/styles/: globals.css
src/renderer/types/: electron.d.ts  index.ts  store.ts
src/renderer/utils/: fileTypes.ts
src/types/: electron.d.ts
(+57 files in other folders)
